created a portfolio website with html css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,55 @@
 </head>
 
 <body>
-    <h1>Hello</h1>
+    <div class="header">
+        <div class="left">
+
+
+            <h1 class="h1">Welcome To</h1>
+            <h1 class="h1"><span class="text-color">Web development </span> World</h1>
+
+            <h4 class="h4">Build website for client</h4>
+            <p>Hello! I'm sharif..i am a web developer..I build a portfolio and many E-commerce website for client...
+                Lorem
+                ipsum dolor sit amet, consectetur adipisicing elit. Commodi maiores nulla itaque.</p>
+
+            <button class="btn">Hire Me</button>
+        </div>
+        <div>
+            <img style="width: 30vw;" src="images/profile.png" alt="My profile">
+        </div>
+    </div>
+
+    <div class="header">
+        <div>
+            <img style="width: 30vw;" src="images/my-bg2.png" alt="my picture">
+        </div>
+        <div class="left">
+            <h2>Dream Big</h2>
+            <h4 class="h4">Become a web developer</h4>
+            <p>I already learned html css from Programming hero course..i am practicing more with html css...and i am
+                learning so much...If you want you can check my resume..here is my cv </p>
+            <button class="btn">Download CV</button>
+        </div>
+    </div>
+    <h2>Experiences</h2>
+    <div class="header">
+        <div class="left right-shadow">
+            <h2>Full-stack Web developer</h2>
+            <h4 class="h4 text-color">2023-Present | Pro Level Developer</h4>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                efficient.
+                I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even
+                know
+                the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div class="left right-shadow">
+            <h2>Baby level Web Developer</h2>
+            <h4 class="h4 text-color">2022 | Programming Hero Learner</h4>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
+                it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </div>
 </body>
 
 </html>
